--- a/www/404.html
+++ b/www/404.html
@@ -6,6 +6,6 @@
   <h1>Страница не существует!</h1>
   <p>Проверьте правильность ввода адреса</p>
   <p>С Уважением. </p>
-  <p><a href = '/'>Домашняя страница</a></p>
+  <p>Перейти на <a href = '/'>главную страницу</a></p>
 </body>
 </html>
